--- a/ui-tests/tests/notebooks/map_update.ipynb
+++ b/ui-tests/tests/notebooks/map_update.ipynb
@@ -12,8 +12,7 @@
    "outputs": [],
    "source": [
     "from ipyopenlayers import (\n",
-    "    Map, TileLayer, ImageOverlay, VideoOverlay, PopupOverlay,\n",
-    "    ZoomSlider, FullScreen, ScaleLine, MousePosition\n",
+    "    Map, RasterTileLayer\n",
     ")\n",
     "\n",
     "m = Map(center=[0.0, 0.0], zoom=2)\n",
@@ -31,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "layer = TileLayer()\n",
+    "layer = RasterTileLayer()\n",
     "m.add_layer(layer)"
    ]
   }
