--- a/examples/RasterLayer.ipynb
+++ b/examples/RasterLayer.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "bf54f7b270eb4c12ba2fbcaeea2583da",
        "version_major": 2,
        "version_minor": 0
       },
