draft swipe position

--- a/examples/RasterLayer.ipynb
+++ b/examples/RasterLayer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf54f7b270eb4c12ba2fbcaeea2583da",
+       "model_id": "77010bf2973f41d9a93c400f283857bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
        "Map(center=[4.299875503991089, 46.85012303279379], zoom=0.0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +92,64 @@
     "raster = RasterTileLayer(attributions=attributions,url='https://api.maptiler.com/maps/dataviz-dark/{z}/{x}/{y}.png?key=' + key,\n",
     "    tileSize= 512)\n",
     "m.add_layer(raster) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2b5931a98ee4e40b8b23f7e5f3ee8a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, description='Swipe Position:')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77010bf2973f41d9a93c400f283857bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[4.299875503991089, 46.85012303279379], layers=[RasterTileLayer(), RasterTileLayer(url='https://api…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "# Création du slider\n",
+    "slider = widgets.IntSlider(\n",
+    "    value=0,\n",
+    "    min=0,\n",
+    "    max=100,\n",
+    "    step=1,\n",
+    "    description='Swipe Position:',\n",
+    "    continuous_update=True\n",
+    ")\n",
+    "\n",
+    "# Créez une fonction pour mettre à jour le modèle lorsque le slider change\n",
+    "def on_slider_change(change):\n",
+    "    m.swipe_position=change['new']\n",
+    "\n",
+    "# Lier la fonction de mise à jour au changement de valeur du slider\n",
+    "slider.observe(on_slider_change, names='value')\n",
+    "\n",
+    "# Affichez le slider dans le notebook\n",
+    "display(slider)\n",
+    "display(m)\n"
    ]
   },
   {
@@ -132,6 +190,13 @@
    "source": [
     "m.remove_layer(rasterlay)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
